# ethel-tutor-eval

./: .gitignore  GraderEvaluation.ipynb  LICENSE.md  README.md  config.yaml  ollama-script-linux.sh  poetry-script.sh  pyproject.toml
datasets/: base_dataset.py  downloaders.py  gsm8k_dataset.py  math_dataset.py
evaluation/: base_eval_task.py  grader_task.py  gsm8k_task.py  math_task.py  mgsm_task.py  tutoreval_task.py
evalutaion/: base_eval_task.py  gsm8k_task.py  math_task.py
models/: base_model.py  ethel.py  ollama.py  openai_model.py  smol.py
notebooks/: grader_leaderboard.ipynb  gsm8k.ipynb  math.ipynb
our_datasets/: base_dataset.py  grader_dataset.py  gsm8k_dataset.py  math_dataset.py  mgsm_dataset.py  tutoreval_dataset.py
plots/: bar_chart.py  line_plot_MGSM.py  mean_difficulty.py  mean_difficulty_2.json  mean_difficulty_3.json  mean_scores_1.json  model_val_1.json  model_val_2.json  spider_chart.py  spider_chart_MATH.py
plots/MATH/: plot_math_accuracy.py
plots/tutor_eval/: bar_chart.py  mean_difficulty.py  mean_difficulty_2.json  mean_scores_2.json  model_val_3.json  spider_chart.py
scripts/: accuracy_calculator.py  download_smollm.py  run_best_grader.py  run_pipeline.py  run_tutoreval.py  testing.ipynb
templates/: closedbook_grading_template.txt  openbook_grading_template.txt
test_scripts/: llama_key.py  text_example.py  vision_example.py
tests/: test_gsm8k_task.py  test_math_task.py  test_ollama.py  test_tutoreval_task.py
utils/: config.py  custom_stopping.py  read_utils.py  recorder.py
